Contact us form ready. Yet to succeed with upload file

--- a/public/stylesheets/commercial_styles.css
+++ b/public/stylesheets/commercial_styles.css
@@ -4,3 +4,11 @@
 .com-chair img {
     float: right;
 }
+.commercial-panel{
+    background: transparent !important;
+    outline: none;
+    text-align: left !important;
+}
+.commercial-panel:hover{
+    color: forestgreen;
+}
