--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -71,9 +71,18 @@ h1,p,h2,h3,h4,h5,h6{
 }
 #toaster {
   position: fixed;
-  top: 56px;
+  top: 200px;
   height: 48px;
   left: 0;
   width: 100%;
   z-index: 10000;
+}
+#load{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -50px;
+    width: 100px;
+    height: 100px;
 }
