--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,8 +31,7 @@ body {
 }
 .scrollable-div {
     background: transparent;
-    position: absolute;
-    padding-top: 50px;
+    position: absolute;   
 }
 h1,p,h2,h3,h4,h5,h6{
     color: rgb(70,10,30);
@@ -85,5 +84,36 @@ h1,p,h2,h3,h4,h5,h6{
     margin-left: -50px;
     width: 100px;
     height: 100px;
-    z-index: 1000;
+    z-index: 2000;
+}
+.footer {
+    width: 100%;
+    height: 5px;
+    position: sticky;
+    bottom: 0;
+}
+.footer .container-fluid p{
+    text-align: center;
+}
+.footer .container-fluid p a{
+    color: black;
+}
+.img-stretch{
+    width: 100%;
+}
+.prevent-footer-cover{
+    min-height: 100%;
+    margin-bottom: 50px;
+    clear: both;
+}
+#bottom-div{
+    height:50px
+}
+#top-div{
+    height:55px
+}
+#middle-div{
+    display:block;
+    overflow:auto;
+    height:350px;
 }
