Image names changed and img recieved via resolve

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -117,3 +117,9 @@ h1,p,h2,h3,h4,h5,h6{
     overflow:auto;
     height:350px;
 }
+.page-text{
+    padding-top: 50px;
+}
+.img-top-panel{
+    padding-top: 50px;
+}
