--- a/public/stylesheets/essential_styles.css
+++ b/public/stylesheets/essential_styles.css
@@ -1,6 +1,9 @@
+.ess-cube{
+    background-color: rgb(250, 230, 226);
+}
 .ess-cube img {
-    width: 100%;
-    height: 100%;
+   /* width: 100%;
+    height: 100%;*/
 }
 
 .ess-leg {
