--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,9 @@
+html{
+    height: 100%;
+}
 body {
     padding-top: 51px;
+    height: 100%;
 }
 .logo{
     height: 50px;
@@ -86,18 +90,6 @@ h1,p,h2,h3,h4,h5,h6{
     height: 100px;
     z-index: 2000;
 }
-.footer {
-    width: 100%;
-    height: 5px;
-    position: sticky;
-    bottom: 0;
-}
-.footer .container-fluid p{
-    text-align: center;
-}
-.footer .container-fluid p a{
-    color: black;
-}
 .img-stretch{
     width: 100%;
 }
@@ -122,4 +114,26 @@ h1,p,h2,h3,h4,h5,h6{
 }
 .img-top-panel{
     padding-top: 50px;
+}
+.footer {
+    bottom: 0;
+    height: 35px;
+    left: 0;
+    position: relative;
+    width: 100%;
+    background-color: darkslategray;
+}
+.footer .container-fluid p{
+    text-align: center;
+    color: azure;
+    font-size: 10px;
+    margin-top: 0;
+}
+.footer .container-fluid p a{
+    color: azure;
+}
+#main-wrapper {
+    padding: 0;
+    position: relative;
+    height: 100%;
 }
