--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -168,3 +168,8 @@ h1,p,h2,h3,h4,h5,h6{
     margin-left:35px;
     width:100px;
 }
+.disabled{
+    cursor: default;
+    opacity: 0.5;
+    color: red !importatnt;
+}
