fixed footer added

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,7 +130,7 @@ h1,p,h2,h3,h4,h5,h6{
     height: 30px;
     width: 100%;
     background-color: darkgray;
-    position: absolute; 
+    position: fixed; 
     overflow:auto;
     display: table; 
 }
