adjusted media circle

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -131,7 +131,7 @@ h1,p,h2,h3,h4,h5,h6{
     height: 30px;
     width: 100%;
     background-color: darkgray;
-    position: fixed; 
+    position: absolute; 
     overflow:auto;
     display: table; 
 }
@@ -168,6 +168,6 @@ h1,p,h2,h3,h4,h5,h6{
 }
 .social-media{
     position: fixed;
-    top:150px;
+    top:180px;
     right: 0;
 }
