--- a/public/stylesheets/commercial_styles.css
+++ b/public/stylesheets/commercial_styles.css
@@ -8,6 +8,7 @@
     background: transparent !important;
     outline: none;
     text-align: left !important;
+    font-weight: bold;
 }
 .commercial-panel:hover{
     color: forestgreen;
