--- a/public/stylesheets/essential_styles.css
+++ b/public/stylesheets/essential_styles.css
@@ -18,6 +18,7 @@
     background: transparent !important;
     outline: none;
     text-align: left !important;
+    font-weight: bold;
 }
 .essential-panel:hover{
     color: indianred;
